--- a/DemoDynamicCollectionView/Base.lproj/Main.storyboard
+++ b/DemoDynamicCollectionView/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="hIk-jV-CrL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="g8v-Nn-l6i">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -38,28 +38,68 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="k94-2A-Zvk"/>
+                    <connections>
+                        <segue destination="lSO-RJ-L3F" kind="show" identifier="SpringySegue" id="Ncm-0o-ZB8"/>
+                        <segue destination="YxQ-7c-sHZ" kind="show" identifier="NewtownianSegue" id="3Hn-IQ-imv"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R6H-WW-nP7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1162" y="826"/>
+            <point key="canvasLocation" x="1974" y="826"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="MHn-P0-lAZ">
+            <objects>
+                <viewController id="YxQ-7c-sHZ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TqR-Ml-Csq"/>
+                        <viewControllerLayoutGuide type="bottom" id="FgU-dp-7Di"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="e8u-Id-HdK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.086274509799999996" green="0.6588235294" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lF4-V3-SqR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2645" y="826"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ozL-Mf-Tij">
+            <objects>
+                <viewController id="lSO-RJ-L3F" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="haG-2H-buN"/>
+                        <viewControllerLayoutGuide type="bottom" id="U2c-4u-3fh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="egP-pc-eZ9">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="btp-49-zia" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1974" y="1628"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="xhW-QR-O1p">
+        <scene sceneID="Fi7-H7-JGB">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hIk-jV-CrL" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="g8v-Nn-l6i" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gxy-6W-ceE">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eDC-5y-f5t">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="km4-57-p1o" kind="relationship" relationship="rootViewController" id="DqF-1E-wws"/>
+                        <segue destination="km4-57-p1o" kind="relationship" relationship="rootViewController" id="MeJ-ck-Ojr"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="u6c-Gv-s1J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cah-VZ-b85" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="350" y="826"/>
+            <point key="canvasLocation" x="1162" y="826"/>
         </scene>
     </scenes>
 </document>
