--- a/DemoDynamicCollectionView/Base.lproj/Main.storyboard
+++ b/DemoDynamicCollectionView/Base.lproj/Main.storyboard
@@ -39,8 +39,8 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="k94-2A-Zvk"/>
                     <connections>
-                        <segue destination="lSO-RJ-L3F" kind="show" identifier="SpringySegue" id="Ncm-0o-ZB8"/>
                         <segue destination="YxQ-7c-sHZ" kind="show" identifier="NewtownianSegue" id="3Hn-IQ-imv"/>
+                        <segue destination="HlA-nf-J8G" kind="show" identifier="SpringySegue" id="qWp-Wv-MVB"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R6H-WW-nP7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -63,25 +63,41 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lF4-V3-SqR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2645" y="826"/>
+            <point key="canvasLocation" x="2742" y="826"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="ozL-Mf-Tij">
+        <!--Collection View Controller-->
+        <scene sceneID="LtE-05-Q9h">
             <objects>
-                <viewController id="lSO-RJ-L3F" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="haG-2H-buN"/>
-                        <viewControllerLayoutGuide type="bottom" id="U2c-4u-3fh"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="egP-pc-eZ9">
+                <collectionViewController id="HlA-nf-J8G" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="gbp-WV-CTu">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="btp-49-zia" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MmA-1n-zzb">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="aVa-Fe-tiY">
+                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="HlA-nf-J8G" id="s2D-pT-skp"/>
+                            <outlet property="delegate" destination="HlA-nf-J8G" id="cV0-hR-PFt"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6ZD-bp-RUb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1974" y="1628"/>
+            <point key="canvasLocation" x="1974" y="1595"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Fi7-H7-JGB">
